# disposvel

./: CMakeLists.txt  README.md  manifest.xml
include/: cylinder.h  disposvel-component.hpp  distance.h  distance2.h  functions.h  segment.h  support.h
include/disposvel/: disposvel-types.hpp
src/: CMakeLists.txt  disposvel-component-bis.cpp  disposvel-component.cpp  disposvel-plugin.cpp  support.cpp
src/src_classes/: Cylinder.cpp  Distance.cpp  Distance2.cpp  Segment.cpp  functions.cpp
test/: test.ops
